// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression - Badge > blue badge with dot 1`] = `
<div>
  <span
    class="inline-flex items-center rounded-full font-medium whitespace-nowrap animate-scale-in transition-colors duration-fast ease-oe bg-oe-blue-subtle text-oe-blue-text h-6 px-2 text-xs gap-1.5"
  >
    <span
      class="h-1.5 w-1.5 rounded-full shrink-0 bg-oe-blue"
    />
    Active
  </span>
</div>
`;

exports[`Visual Regression - Badge > error badge (small) 1`] = `
<div>
  <span
    class="inline-flex items-center rounded-full font-medium whitespace-nowrap animate-scale-in transition-colors duration-fast ease-oe bg-semantic-error-bg text-semantic-error h-5 px-1.5 text-2xs gap-1"
  >
    Failed
  </span>
</div>
`;

exports[`Visual Regression - Badge > neutral badge 1`] = `
<div>
  <span
    class="inline-flex items-center rounded-full font-medium whitespace-nowrap animate-scale-in transition-colors duration-fast ease-oe bg-surface-secondary text-content-secondary h-6 px-2 text-xs gap-1.5"
  >
    Draft
  </span>
</div>
`;

exports[`Visual Regression - Badge > success badge 1`] = `
<div>
  <span
    class="inline-flex items-center rounded-full font-medium whitespace-nowrap animate-scale-in transition-colors duration-fast ease-oe bg-semantic-success-bg text-semantic-success h-6 px-2 text-xs gap-1.5"
  >
    Completed
  </span>
</div>
`;

exports[`Visual Regression - Badge > warning badge 1`] = `
<div>
  <span
    class="inline-flex items-center rounded-full font-medium whitespace-nowrap animate-scale-in transition-colors duration-fast ease-oe bg-semantic-warning-bg text-[#b45309] h-6 px-2 text-xs gap-1.5"
  >
    Pending
  </span>
</div>
`;

exports[`Visual Regression - Breadcrumb > renders empty (returns null for empty items) 1`] = `<div />`;

exports[`Visual Regression - Breadcrumb > renders multi-level breadcrumb with links 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="flex items-center gap-1 text-xs"
  >
    <a
      aria-label="Dashboard"
      class="flex items-center text-content-tertiary hover:text-content-secondary transition-colors"
      data-discover="true"
      href="/"
    >
      <svg
        class="lucide lucide-house"
        fill="none"
        height="13"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="13"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <span
      class="flex items-center gap-1"
    >
      <svg
        class="lucide lucide-chevron-right text-content-quaternary"
        fill="none"
        height="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-content-tertiary hover:text-content-secondary transition-colors truncate max-w-[200px]"
        data-discover="true"
        href="/projects"
      >
        Projects
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        class="lucide lucide-chevron-right text-content-quaternary"
        fill="none"
        height="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <a
        class="text-content-tertiary hover:text-content-secondary transition-colors truncate max-w-[200px]"
        data-discover="true"
        href="/projects/proj-001"
      >
        Office Tower Berlin
      </a>
    </span>
    <span
      class="flex items-center gap-1"
    >
      <svg
        class="lucide lucide-chevron-right text-content-quaternary"
        fill="none"
        height="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      <span
        class="text-content-primary font-medium truncate max-w-[200px]"
      >
        Main Estimate
      </span>
    </span>
  </nav>
</div>
`;

exports[`Visual Regression - Breadcrumb > renders nothing for a single-item trail (top bar already names the module) 1`] = `<div />`;

exports[`Visual Regression - Button > danger button 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium whitespace-nowrap select-none transition-all duration-normal ease-oe transform-gpu will-change-transform focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 bg-semantic-error text-content-inverse hover:opacity-90 active:opacity-80 shadow-xs hover:shadow-md border border-transparent hover:scale-[1.02] active:scale-[0.98] h-8 px-3.5 text-sm gap-1.5 rounded-lg"
  >
    <span
      class="inline-flex items-center"
    >
      Delete
    </span>
  </button>
</div>
`;

exports[`Visual Regression - Button > disabled state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium whitespace-nowrap select-none transition-all duration-normal ease-oe transform-gpu will-change-transform focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 bg-oe-blue text-content-inverse hover:bg-oe-blue-hover active:bg-oe-blue-active shadow-xs hover:shadow-md border border-transparent hover:scale-[1.02] active:scale-[0.98] h-8 px-3.5 text-sm gap-1.5 rounded-lg opacity-40 pointer-events-none"
    disabled=""
  >
    <span
      class="inline-flex items-center"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Visual Regression - Button > ghost button 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium whitespace-nowrap select-none transition-all duration-normal ease-oe transform-gpu will-change-transform focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 bg-transparent text-content-secondary hover:bg-surface-secondary active:bg-surface-tertiary border border-transparent active:scale-[0.98] h-8 px-3.5 text-sm gap-1.5 rounded-lg"
  >
    <span
      class="inline-flex items-center"
    >
      Options
    </span>
  </button>
</div>
`;

exports[`Visual Regression - Button > loading state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium whitespace-nowrap select-none transition-all duration-normal ease-oe transform-gpu will-change-transform focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 bg-oe-blue text-content-inverse hover:bg-oe-blue-hover active:bg-oe-blue-active shadow-xs hover:shadow-md border border-transparent hover:scale-[1.02] active:scale-[0.98] h-8 px-3.5 text-sm gap-1.5 rounded-lg opacity-40 pointer-events-none"
    disabled=""
  >
    <svg
      class="animate-spin h-4 w-4"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="3"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Visual Regression - Button > primary button 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium whitespace-nowrap select-none transition-all duration-normal ease-oe transform-gpu will-change-transform focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 bg-oe-blue text-content-inverse hover:bg-oe-blue-hover active:bg-oe-blue-active shadow-xs hover:shadow-md border border-transparent hover:scale-[1.02] active:scale-[0.98] h-8 px-3.5 text-sm gap-1.5 rounded-lg"
  >
    <span
      class="inline-flex items-center"
    >
      Save
    </span>
  </button>
</div>
`;

exports[`Visual Regression - Button > secondary button 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium whitespace-nowrap select-none transition-all duration-normal ease-oe transform-gpu will-change-transform focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 bg-surface-primary text-content-primary border border-border hover:bg-surface-secondary active:bg-surface-tertiary shadow-xs hover:shadow-sm active:scale-[0.98] h-8 px-3.5 text-sm gap-1.5 rounded-lg"
  >
    <span
      class="inline-flex items-center"
    >
      Cancel
    </span>
  </button>
</div>
`;

exports[`Visual Regression - Button > with icon (left) 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium whitespace-nowrap select-none transition-all duration-normal ease-oe transform-gpu will-change-transform focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 bg-oe-blue text-content-inverse hover:bg-oe-blue-hover active:bg-oe-blue-active shadow-xs hover:shadow-md border border-transparent hover:scale-[1.02] active:scale-[0.98] h-8 px-3.5 text-sm gap-1.5 rounded-lg"
  >
    <span
      class="shrink-0"
    >
      <span>
        +
      </span>
    </span>
    <span
      class="inline-flex items-center"
    >
      Add Item
    </span>
  </button>
</div>
`;

exports[`Visual Regression - Card > card with footer and hoverable 1`] = `
<div>
  <div
    class="rounded-xl border border-border-light bg-surface-elevated shadow-xs transition-all duration-normal ease-oe transform-gpu hover:shadow-md hover:border-border hover:-translate-y-0.5 active:translate-y-0 active:shadow-xs focus-within:ring-2 focus-within:ring-oe-blue/20 focus-within:border-oe-blue/40 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="min-w-0"
      >
        <h3
          class="text-lg font-semibold text-content-primary truncate"
        >
          Recent BOQ
        </h3>
      </div>
      <div
        class="shrink-0"
      >
        <button>
          View All
        </button>
      </div>
    </div>
    <div
      class="mt-4"
    >
      <p>
        3 positions, 54,225 EUR total
      </p>
    </div>
    <div
      class="mt-4 flex items-center justify-end gap-3 border-t border-border-light pt-4"
    >
      <button>
        Export
      </button>
      <button>
        Edit
      </button>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - Card > card with header and content 1`] = `
<div>
  <div
    class="rounded-xl border border-border-light bg-surface-elevated shadow-xs transition-all duration-normal ease-oe transform-gpu p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="min-w-0"
      >
        <h3
          class="text-lg font-semibold text-content-primary truncate"
        >
          Project Summary
        </h3>
        <p
          class="mt-0.5 text-sm text-content-secondary"
        >
          Overview of your project
        </p>
      </div>
    </div>
    <div
      class="mt-4"
    >
      <p>
        Total cost: 1,200,000 EUR
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - Card > card with no padding 1`] = `
<div>
  <div
    class="rounded-xl border border-border-light bg-surface-elevated shadow-xs transition-all duration-normal ease-oe transform-gpu"
  >
    <div>
      Full-width content
    </div>
  </div>
</div>
`;

exports[`Visual Regression - ConfirmDialog > renders danger variant (open) 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center"
  >
    <div
      class="absolute inset-0 bg-black/70 backdrop-blur-lg animate-fade-in"
    />
    <div
      aria-describedby="confirm-dialog-message"
      aria-label="Delete Project"
      aria-modal="true"
      class="relative z-10 w-full max-w-sm mx-4 rounded-2xl border border-border-light bg-surface-elevated shadow-xl animate-scale-in focus:outline-none"
      role="alertdialog"
      tabindex="-1"
    >
      <div
        class="px-6 pt-6 pb-4"
      >
        <div
          class="mx-auto flex h-11 w-11 items-center justify-center rounded-full mb-4 bg-semantic-error/10 text-semantic-error"
        >
          <svg
            class="lucide lucide-trash2"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 6h18"
            />
            <path
              d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
            />
            <path
              d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
          </svg>
        </div>
        <h2
          class="text-base font-semibold text-content-primary text-center"
        >
          Delete Project
        </h2>
        <p
          class="mt-2 text-sm text-content-secondary text-center leading-relaxed"
          id="confirm-dialog-message"
        >
          Are you sure? This action cannot be undone.
        </p>
      </div>
      <div
        class="flex gap-3 px-6 pb-6"
      >
        <button
          class="flex-1 rounded-lg px-4 py-2.5 text-sm font-medium transition-all bg-surface-primary text-content-primary border border-border hover:bg-surface-secondary active:bg-surface-tertiary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 disabled:opacity-40 disabled:pointer-events-none"
          type="button"
        >
          Cancel
        </button>
        <button
          class="flex-1 inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2.5 text-sm font-medium transition-all text-content-inverse bg-semantic-error hover:opacity-90 active:opacity-80 shadow-xs hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-semantic-error disabled:opacity-40 disabled:pointer-events-none"
          data-testid="confirm-dialog-confirm"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - ConfirmDialog > renders loading state 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center"
  >
    <div
      class="absolute inset-0 bg-black/70 backdrop-blur-lg animate-fade-in"
    />
    <div
      aria-describedby="confirm-dialog-message"
      aria-label="Deleting..."
      aria-modal="true"
      class="relative z-10 w-full max-w-sm mx-4 rounded-2xl border border-border-light bg-surface-elevated shadow-xl animate-scale-in focus:outline-none"
      role="alertdialog"
      tabindex="-1"
    >
      <div
        class="px-6 pt-6 pb-4"
      >
        <div
          class="mx-auto flex h-11 w-11 items-center justify-center rounded-full mb-4 bg-semantic-error/10 text-semantic-error"
        >
          <svg
            class="lucide lucide-trash2"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 6h18"
            />
            <path
              d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
            />
            <path
              d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
          </svg>
        </div>
        <h2
          class="text-base font-semibold text-content-primary text-center"
        >
          Deleting...
        </h2>
        <p
          class="mt-2 text-sm text-content-secondary text-center leading-relaxed"
          id="confirm-dialog-message"
        >
          Please wait while the item is being deleted.
        </p>
      </div>
      <div
        class="flex gap-3 px-6 pb-6"
      >
        <button
          class="flex-1 rounded-lg px-4 py-2.5 text-sm font-medium transition-all bg-surface-primary text-content-primary border border-border hover:bg-surface-secondary active:bg-surface-tertiary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 disabled:opacity-40 disabled:pointer-events-none"
          disabled=""
          type="button"
        >
          Cancel
        </button>
        <button
          class="flex-1 inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2.5 text-sm font-medium transition-all text-content-inverse bg-semantic-error hover:opacity-90 active:opacity-80 shadow-xs hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-semantic-error disabled:opacity-40 disabled:pointer-events-none"
          data-testid="confirm-dialog-confirm"
          disabled=""
          type="button"
        >
          <svg
            class="lucide lucide-loader-circle animate-spin"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - ConfirmDialog > renders nothing when closed 1`] = `<div />`;

exports[`Visual Regression - ConfirmDialog > renders warning variant (open) 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center"
  >
    <div
      class="absolute inset-0 bg-black/70 backdrop-blur-lg animate-fade-in"
    />
    <div
      aria-describedby="confirm-dialog-message"
      aria-label="Discard Changes"
      aria-modal="true"
      class="relative z-10 w-full max-w-sm mx-4 rounded-2xl border border-border-light bg-surface-elevated shadow-xl animate-scale-in focus:outline-none"
      role="alertdialog"
      tabindex="-1"
    >
      <div
        class="px-6 pt-6 pb-4"
      >
        <div
          class="mx-auto flex h-11 w-11 items-center justify-center rounded-full mb-4 bg-semantic-warning/10 text-semantic-warning"
        >
          <svg
            class="lucide lucide-triangle-alert"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
        <h2
          class="text-base font-semibold text-content-primary text-center"
        >
          Discard Changes
        </h2>
        <p
          class="mt-2 text-sm text-content-secondary text-center leading-relaxed"
          id="confirm-dialog-message"
        >
          You have unsaved changes. Do you want to discard them?
        </p>
      </div>
      <div
        class="flex gap-3 px-6 pb-6"
      >
        <button
          class="flex-1 rounded-lg px-4 py-2.5 text-sm font-medium transition-all bg-surface-primary text-content-primary border border-border hover:bg-surface-secondary active:bg-surface-tertiary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 disabled:opacity-40 disabled:pointer-events-none"
          type="button"
        >
          Keep editing
        </button>
        <button
          class="flex-1 inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2.5 text-sm font-medium transition-all text-content-inverse bg-semantic-warning hover:opacity-90 active:opacity-80 shadow-xs hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-semantic-warning disabled:opacity-40 disabled:pointer-events-none"
          data-testid="confirm-dialog-confirm"
          type="button"
        >
          Discard
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - EmptyState > renders minimal (title only) 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-16 px-6 text-center"
  >
    <h3
      class="text-lg font-semibold text-content-primary"
    >
      No items found
    </h3>
  </div>
</div>
`;

exports[`Visual Regression - EmptyState > renders with custom ReactNode action 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-16 px-6 text-center"
  >
    <h3
      class="text-lg font-semibold text-content-primary"
    >
      No data
    </h3>
    <p
      class="mt-1.5 max-w-sm text-sm text-content-secondary"
    >
      Import data from an external source.
    </p>
    <div
      class="mt-5"
    >
      <button
        class="custom-btn"
      >
        Import Data
      </button>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - EmptyState > renders with icon, description, and action button 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-16 px-6 text-center"
  >
    <div
      class="mb-4 flex h-14 w-14 items-center justify-center rounded-md bg-surface-secondary text-content-tertiary shadow-[inset_0_2px_4px_rgba(0,0,0,0.06),inset_0_-1px_0_rgba(255,255,255,0.6)]"
    >
      <span
        data-testid="mock-icon"
      >
        icon
      </span>
    </div>
    <h3
      class="text-lg font-semibold text-content-primary"
    >
      No projects
    </h3>
    <p
      class="mt-1.5 max-w-sm text-sm text-content-secondary"
    >
      Create your first project to get started.
    </p>
    <div
      class="mt-5"
    >
      <button
        class="inline-flex items-center justify-center font-medium whitespace-nowrap select-none transition-all duration-normal ease-oe transform-gpu will-change-transform focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-oe-blue focus-visible:ring-offset-2 bg-oe-blue text-content-inverse hover:bg-oe-blue-hover active:bg-oe-blue-active shadow-xs hover:shadow-md border border-transparent hover:scale-[1.02] active:scale-[0.98] h-8 px-3.5 text-sm gap-1.5 rounded-lg"
      >
        <span
          class="inline-flex items-center"
        >
          Create Project
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - InfoHint > block mode - collapsed 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      class="flex items-center gap-1.5 rounded-md px-2.5 py-1 text-xs font-medium transition-all text-content-tertiary hover:text-content-secondary hover:bg-surface-secondary/60"
    >
      <svg
        class="lucide lucide-info shrink-0"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <span>
        How it works
      </span>
    </button>
    <div
      class="overflow-hidden transition-all duration-200 ease-out max-h-0 opacity-0"
    >
      <div
        class="rounded-lg border border-border-light bg-surface-secondary/40 px-4 py-2.5 text-xs text-content-secondary leading-relaxed"
      >
        This is helpful information about the current section.
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - InfoHint > block mode with custom label 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      class="flex items-center gap-1.5 rounded-md px-2.5 py-1 text-xs font-medium transition-all text-content-tertiary hover:text-content-secondary hover:bg-surface-secondary/60"
    >
      <svg
        class="lucide lucide-info shrink-0"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <span>
        What is this?
      </span>
    </button>
    <div
      class="overflow-hidden transition-all duration-200 ease-out max-h-0 opacity-0"
    >
      <div
        class="rounded-lg border border-border-light bg-surface-secondary/40 px-4 py-2.5 text-xs text-content-secondary leading-relaxed"
      >
        Detailed explanation goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - InfoHint > inline mode - collapsed 1`] = `
<div>
  <span
    class="relative inline-flex items-center"
  >
    <button
      aria-expanded="false"
      aria-label="Info"
      class="inline-flex items-center justify-center rounded-full p-0.5 transition-colors text-content-tertiary hover:text-content-secondary hover:bg-surface-secondary"
    >
      <svg
        class="lucide lucide-info"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`Visual Regression - Input > default input with label 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm font-medium text-content-primary transition-colors duration-fast ease-oe"
      for="project-name"
    >
      Project Name
    </label>
    <div
      class="relative group"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="h-9 w-full rounded-lg border bg-surface-primary px-3 text-sm text-content-primary placeholder:text-content-tertiary transition-all duration-normal ease-oe focus:outline-none focus:ring-2 focus:ring-oe-blue/30 focus:border-oe-blue focus:shadow-[0_0_0_4px_rgba(0,113,227,0.08)] border-border hover:border-content-tertiary"
        id="project-name"
        name="project-name"
        placeholder="Enter project name"
      />
    </div>
  </div>
</div>
`;

exports[`Visual Regression - Input > disabled input 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm font-medium text-content-primary transition-colors duration-fast ease-oe"
      for="read-only"
    >
      Read Only
    </label>
    <div
      class="relative group"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="h-9 w-full rounded-lg border bg-surface-primary px-3 text-sm text-content-primary placeholder:text-content-tertiary transition-all duration-normal ease-oe focus:outline-none focus:ring-2 focus:ring-oe-blue/30 focus:border-oe-blue focus:shadow-[0_0_0_4px_rgba(0,113,227,0.08)] border-border hover:border-content-tertiary opacity-40 cursor-not-allowed bg-surface-secondary"
        disabled=""
        id="read-only"
        name="read-only"
        value="Fixed value"
      />
    </div>
  </div>
</div>
`;

exports[`Visual Regression - Input > input with error state 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm font-medium text-content-primary transition-colors duration-fast ease-oe"
      for="email"
    >
      Email
    </label>
    <div
      class="relative group"
    >
      <input
        aria-describedby="email-error"
        aria-invalid="true"
        autocomplete="off"
        class="h-9 w-full rounded-lg border bg-surface-primary px-3 text-sm text-content-primary placeholder:text-content-tertiary transition-all duration-normal ease-oe focus:outline-none focus:ring-2 focus:ring-oe-blue/30 focus:border-oe-blue focus:shadow-[0_0_0_4px_rgba(0,113,227,0.08)] border-semantic-error focus:ring-semantic-error/30 focus:border-semantic-error focus:shadow-[0_0_0_4px_rgba(255,59,48,0.08)]"
        id="email"
        name="email"
        type="email"
      />
    </div>
    <p
      class="text-xs text-semantic-error animate-slide-up"
      id="email-error"
      role="alert"
    >
      Please enter a valid email address
    </p>
  </div>
</div>
`;

exports[`Visual Regression - Input > input with hint 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm font-medium text-content-primary transition-colors duration-fast ease-oe"
      for="password"
    >
      Password
    </label>
    <div
      class="relative group"
    >
      <input
        aria-describedby="password-hint"
        aria-invalid="false"
        autocomplete="off"
        class="h-9 w-full rounded-lg border bg-surface-primary px-3 text-sm text-content-primary placeholder:text-content-tertiary transition-all duration-normal ease-oe focus:outline-none focus:ring-2 focus:ring-oe-blue/30 focus:border-oe-blue focus:shadow-[0_0_0_4px_rgba(0,113,227,0.08)] border-border hover:border-content-tertiary"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <p
      class="text-xs text-content-tertiary"
      id="password-hint"
    >
      Minimum 8 characters
    </p>
  </div>
</div>
`;

exports[`Visual Regression - Input > input with icon 1`] = `
<div>
  <div
    class="flex flex-col gap-1.5"
  >
    <label
      class="text-sm font-medium text-content-primary transition-colors duration-fast ease-oe"
      for="search"
    >
      Search
    </label>
    <div
      class="relative group"
    >
      <div
        class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3 text-content-tertiary transition-colors duration-fast ease-oe group-focus-within:text-oe-blue"
      >
        <span>
          S
        </span>
      </div>
      <input
        aria-invalid="false"
        autocomplete="off"
        class="h-9 w-full rounded-lg border bg-surface-primary px-3 text-sm text-content-primary placeholder:text-content-tertiary transition-all duration-normal ease-oe focus:outline-none focus:ring-2 focus:ring-oe-blue/30 focus:border-oe-blue focus:shadow-[0_0_0_4px_rgba(0,113,227,0.08)] pl-10 border-border hover:border-content-tertiary"
        id="search"
        name="search"
        placeholder="Search..."
      />
    </div>
  </div>
</div>
`;

exports[`Visual Regression - Logo > Logo - large with animation 1`] = `
<div>
  <div
    class="h-10 w-10 relative shrink-0"
    style="animation: oeLogoFloat 3s ease-in-out 1.2s infinite, oeLogoGlow 3s ease-in-out 1.2s infinite;"
  >
    <svg
      class="w-full h-full"
      fill="none"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          id="oe-lg-clip-lg"
        >
          <rect
            height="448"
            rx="96"
            width="448"
            x="32"
            y="32"
          />
        </clippath>
      </defs>
      <rect
        fill="#eef7f0"
        height="448"
        rx="96"
        style="animation: oeBgScale 450ms cubic-bezier(0.34,1.56,0.64,1) both;"
        width="448"
        x="32"
        y="32"
      />
      <g
        clip-path="url(#oe-lg-clip-lg)"
      >
        <g
          style="animation: oeBuildingSlide 600ms cubic-bezier(0.22,1,0.36,1) both; animation-delay: 300ms;"
        >
          <circle
            cx="180"
            cy="188"
            fill="#f2a71b"
            r="58"
          />
          <g
            stroke="#f2a71b"
            stroke-linecap="round"
            stroke-width="16"
          >
            <line
              style="animation: oeWindowFade 400ms ease both; animation-delay: 550ms;"
              x1="180"
              x2="180"
              y1="70"
              y2="102"
            />
            <line
              style="animation: oeWindowFade 400ms ease both; animation-delay: 600ms;"
              x1="180"
              x2="180"
              y1="274"
              y2="306"
            />
            <line
              style="animation: oeWindowFade 400ms ease both; animation-delay: 650ms;"
              x1="58"
              x2="90"
              y1="188"
              y2="188"
            />
            <line
              style="animation: oeWindowFade 400ms ease both; animation-delay: 700ms;"
              x1="270"
              x2="302"
              y1="188"
              y2="188"
            />
            <line
              style="animation: oeWindowFade 400ms ease both; animation-delay: 750ms;"
              x1="98"
              x2="121"
              y1="106"
              y2="129"
            />
            <line
              style="animation: oeWindowFade 400ms ease both; animation-delay: 800ms;"
              x1="239"
              x2="262"
              y1="247"
              y2="270"
            />
            <line
              style="animation: oeWindowFade 400ms ease both; animation-delay: 850ms;"
              x1="262"
              x2="239"
              y1="106"
              y2="129"
            />
          </g>
        </g>
        <path
          d="M32 460 C 120 380, 200 420, 280 380 C 360 340, 420 400, 480 370 V 480 H 32 Z"
          fill="#256e33"
          style="transform-origin: bottom; animation: oeBarGrow 500ms cubic-bezier(0.34,1.56,0.64,1) both; animation-delay: 120ms;"
        />
        <path
          d="M32 480 C 130 420, 220 460, 320 420 C 390 392, 440 430, 480 410 V 480 H 32 Z"
          fill="#35a049"
          style="transform-origin: bottom; animation: oeBarGrow 500ms cubic-bezier(0.34,1.56,0.64,1) both; animation-delay: 200ms;"
        />
        <path
          d="M32 480 C 150 452, 260 480, 360 452 C 410 438, 450 456, 480 448 V 480 H 32 Z"
          fill="#2e8b3f"
          style="transform-origin: bottom; animation: oeBarGrow 500ms cubic-bezier(0.34,1.56,0.64,1) both; animation-delay: 280ms;"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Visual Regression - Logo > Logo - small 1`] = `
<div>
  <div
    class="h-6 w-6 relative shrink-0"
  >
    <svg
      class="w-full h-full"
      fill="none"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          id="oe-lg-clip-sm"
        >
          <rect
            height="448"
            rx="96"
            width="448"
            x="32"
            y="32"
          />
        </clippath>
      </defs>
      <rect
        fill="#eef7f0"
        height="448"
        rx="96"
        width="448"
        x="32"
        y="32"
      />
      <g
        clip-path="url(#oe-lg-clip-sm)"
      >
        <g>
          <circle
            cx="180"
            cy="188"
            fill="#f2a71b"
            r="58"
          />
        </g>
        <path
          d="M32 460 C 120 380, 200 420, 280 380 C 360 340, 420 400, 480 370 V 480 H 32 Z"
          fill="#256e33"
        />
        <path
          d="M32 480 C 130 420, 220 460, 320 420 C 390 392, 440 430, 480 410 V 480 H 32 Z"
          fill="#35a049"
        />
        <path
          d="M32 480 C 150 452, 260 480, 360 452 C 410 438, 450 456, 480 448 V 480 H 32 Z"
          fill="#2e8b3f"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Visual Regression - Logo > LogoWithText - default 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <div
      class="h-7 w-7 relative shrink-0"
    >
      <svg
        class="w-full h-full"
        fill="none"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <clippath
            id="oe-lg-clip-md"
          >
            <rect
              height="448"
              rx="96"
              width="448"
              x="32"
              y="32"
            />
          </clippath>
        </defs>
        <rect
          fill="#eef7f0"
          height="448"
          rx="96"
          width="448"
          x="32"
          y="32"
        />
        <g
          clip-path="url(#oe-lg-clip-md)"
        >
          <g>
            <circle
              cx="180"
              cy="188"
              fill="#f2a71b"
              r="58"
            />
            <g
              stroke="#f2a71b"
              stroke-linecap="round"
              stroke-width="16"
            >
              <line
                x1="180"
                x2="180"
                y1="70"
                y2="102"
              />
              <line
                x1="180"
                x2="180"
                y1="274"
                y2="306"
              />
              <line
                x1="58"
                x2="90"
                y1="188"
                y2="188"
              />
              <line
                x1="270"
                x2="302"
                y1="188"
                y2="188"
              />
              <line
                x1="98"
                x2="121"
                y1="106"
                y2="129"
              />
              <line
                x1="239"
                x2="262"
                y1="247"
                y2="270"
              />
              <line
                x1="262"
                x2="239"
                y1="106"
                y2="129"
              />
            </g>
          </g>
          <path
            d="M32 460 C 120 380, 200 420, 280 380 C 360 340, 420 400, 480 370 V 480 H 32 Z"
            fill="#256e33"
          />
          <path
            d="M32 480 C 130 420, 220 460, 320 420 C 390 392, 440 430, 480 410 V 480 H 32 Z"
            fill="#35a049"
          />
          <path
            d="M32 480 C 150 452, 260 480, 360 452 C 410 438, 450 456, 480 448 V 480 H 32 Z"
            fill="#2e8b3f"
          />
        </g>
      </svg>
    </div>
    <span
      class="text-[17px] leading-none font-medium text-content-primary whitespace-nowrap tracking-tight"
      style="font-family: "Plus Jakarta Sans", system-ui, sans-serif; letter-spacing: -0.02em;"
    >
      <span
        class="text-oe-blue"
      >
        Sod Boys
      </span>
      <span
        class="text-content-quaternary"
      >
         FieldOps
      </span>
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Logo > LogoWithText - without version 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <div
      class="h-7 w-7 relative shrink-0"
    >
      <svg
        class="w-full h-full"
        fill="none"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <clippath
            id="oe-lg-clip-md"
          >
            <rect
              height="448"
              rx="96"
              width="448"
              x="32"
              y="32"
            />
          </clippath>
        </defs>
        <rect
          fill="#eef7f0"
          height="448"
          rx="96"
          width="448"
          x="32"
          y="32"
        />
        <g
          clip-path="url(#oe-lg-clip-md)"
        >
          <g>
            <circle
              cx="180"
              cy="188"
              fill="#f2a71b"
              r="58"
            />
            <g
              stroke="#f2a71b"
              stroke-linecap="round"
              stroke-width="16"
            >
              <line
                x1="180"
                x2="180"
                y1="70"
                y2="102"
              />
              <line
                x1="180"
                x2="180"
                y1="274"
                y2="306"
              />
              <line
                x1="58"
                x2="90"
                y1="188"
                y2="188"
              />
              <line
                x1="270"
                x2="302"
                y1="188"
                y2="188"
              />
              <line
                x1="98"
                x2="121"
                y1="106"
                y2="129"
              />
              <line
                x1="239"
                x2="262"
                y1="247"
                y2="270"
              />
              <line
                x1="262"
                x2="239"
                y1="106"
                y2="129"
              />
            </g>
          </g>
          <path
            d="M32 460 C 120 380, 200 420, 280 380 C 360 340, 420 400, 480 370 V 480 H 32 Z"
            fill="#256e33"
          />
          <path
            d="M32 480 C 130 420, 220 460, 320 420 C 390 392, 440 430, 480 410 V 480 H 32 Z"
            fill="#35a049"
          />
          <path
            d="M32 480 C 150 452, 260 480, 360 452 C 410 438, 450 456, 480 448 V 480 H 32 Z"
            fill="#2e8b3f"
          />
        </g>
      </svg>
    </div>
    <span
      class="text-[17px] leading-none font-medium text-content-primary whitespace-nowrap tracking-tight"
      style="font-family: "Plus Jakarta Sans", system-ui, sans-serif; letter-spacing: -0.02em;"
    >
      <span
        class="text-oe-blue"
      >
        Sod Boys
      </span>
    </span>
  </div>
</div>
`;

exports[`Visual Regression - NotFoundPage > renders the 404 page with navigation links 1`] = `
<div>
  <div
    class="flex min-h-screen items-center justify-center bg-surface-primary p-8"
  >
    <div
      class="max-w-md text-center"
    >
      <div
        class="mb-6 text-9xl font-extrabold bg-gradient-to-r from-oe-blue to-oe-purple bg-clip-text text-transparent select-none animate-fade-in"
      >
        404
      </div>
      <h1
        class="mb-2 text-xl font-semibold text-content-primary"
      >
        Page not found
      </h1>
      <p
        class="mb-8 text-sm text-content-secondary"
      >
        The page you are looking for does not exist or has been moved. Check the URL or go back to the dashboard.
      </p>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          class="inline-flex items-center gap-2 rounded-lg border border-border bg-surface-elevated px-4 py-2.5 text-sm font-medium text-content-primary transition-colors hover:bg-surface-secondary"
        >
          <svg
            class="lucide lucide-arrow-left"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 19-7-7 7-7"
            />
            <path
              d="M19 12H5"
            />
          </svg>
          Go back
        </button>
        <a
          class="inline-flex items-center gap-2 rounded-lg bg-oe-blue px-4 py-2.5 text-sm font-medium text-white transition-colors hover:bg-oe-blue-dark"
          data-discover="true"
          href="/"
        >
          <svg
            class="lucide lucide-house"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
            />
            <path
              d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
            />
          </svg>
          Dashboard
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - SkeletonLoader > SkeletonCard - single card 1`] = `
<div>
  <div
    aria-hidden="true"
    class="rounded-xl border border-border-light bg-surface-elevated p-5 space-y-3"
    data-testid="skeleton-card"
  >
    <div
      class="animate-pulse rounded bg-surface-secondary h-10 w-10 rounded-xl"
    />
    <div
      class="animate-pulse rounded bg-surface-secondary h-4 w-3/4"
    />
    <div
      class="animate-pulse rounded bg-surface-secondary h-3 w-1/2"
    />
    <div
      class="flex items-center gap-2 pt-1"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-5 w-16 rounded-full"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-5 w-12 rounded-full"
      />
    </div>
  </div>
</div>
`;

exports[`Visual Regression - SkeletonLoader > SkeletonGrid - 4 items 1`] = `
<div>
  <div
    aria-hidden="true"
    class="grid gap-4 sm:grid-cols-2 lg:grid-cols-3"
    data-testid="skeleton-grid"
  >
    <div
      aria-hidden="true"
      class="rounded-xl border border-border-light bg-surface-elevated p-5 space-y-3"
      data-testid="skeleton-card"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-10 w-10 rounded-xl"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-4 w-3/4"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 w-1/2"
      />
      <div
        class="flex items-center gap-2 pt-1"
      >
        <div
          class="animate-pulse rounded bg-surface-secondary h-5 w-16 rounded-full"
        />
        <div
          class="animate-pulse rounded bg-surface-secondary h-5 w-12 rounded-full"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="rounded-xl border border-border-light bg-surface-elevated p-5 space-y-3"
      data-testid="skeleton-card"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-10 w-10 rounded-xl"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-4 w-3/4"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 w-1/2"
      />
      <div
        class="flex items-center gap-2 pt-1"
      >
        <div
          class="animate-pulse rounded bg-surface-secondary h-5 w-16 rounded-full"
        />
        <div
          class="animate-pulse rounded bg-surface-secondary h-5 w-12 rounded-full"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="rounded-xl border border-border-light bg-surface-elevated p-5 space-y-3"
      data-testid="skeleton-card"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-10 w-10 rounded-xl"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-4 w-3/4"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 w-1/2"
      />
      <div
        class="flex items-center gap-2 pt-1"
      >
        <div
          class="animate-pulse rounded bg-surface-secondary h-5 w-16 rounded-full"
        />
        <div
          class="animate-pulse rounded bg-surface-secondary h-5 w-12 rounded-full"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="rounded-xl border border-border-light bg-surface-elevated p-5 space-y-3"
      data-testid="skeleton-card"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-10 w-10 rounded-xl"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-4 w-3/4"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 w-1/2"
      />
      <div
        class="flex items-center gap-2 pt-1"
      >
        <div
          class="animate-pulse rounded bg-surface-secondary h-5 w-16 rounded-full"
        />
        <div
          class="animate-pulse rounded bg-surface-secondary h-5 w-12 rounded-full"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - SkeletonLoader > SkeletonTable - 3 rows x 4 columns 1`] = `
<div>
  <div
    aria-hidden="true"
    class="rounded-xl border border-border-light bg-surface-elevated overflow-hidden"
    data-testid="skeleton-table"
  >
    <div
      class="flex items-center gap-4 px-4 py-3 border-b border-border-light bg-surface-secondary/40"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 w-24"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 flex-1"
      />
    </div>
    <div
      class="flex items-center gap-4 px-4 py-3.5 border-b border-border-light/50"
      data-testid="skeleton-table-row"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-20"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
    </div>
    <div
      class="flex items-center gap-4 px-4 py-3.5 border-b border-border-light/50"
      data-testid="skeleton-table-row"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-20"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
    </div>
    <div
      class="flex items-center gap-4 px-4 py-3.5"
      data-testid="skeleton-table-row"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-20"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
    </div>
  </div>
</div>
`;

exports[`Visual Regression - SkeletonLoader > SkeletonTable - default dimensions (5x5) 1`] = `
<div>
  <div
    aria-hidden="true"
    class="rounded-xl border border-border-light bg-surface-elevated overflow-hidden"
    data-testid="skeleton-table"
  >
    <div
      class="flex items-center gap-4 px-4 py-3 border-b border-border-light bg-surface-secondary/40"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 w-24"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3 flex-1"
      />
    </div>
    <div
      class="flex items-center gap-4 px-4 py-3.5 border-b border-border-light/50"
      data-testid="skeleton-table-row"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-20"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
    </div>
    <div
      class="flex items-center gap-4 px-4 py-3.5 border-b border-border-light/50"
      data-testid="skeleton-table-row"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-20"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
    </div>
    <div
      class="flex items-center gap-4 px-4 py-3.5 border-b border-border-light/50"
      data-testid="skeleton-table-row"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-20"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
    </div>
    <div
      class="flex items-center gap-4 px-4 py-3.5 border-b border-border-light/50"
      data-testid="skeleton-table-row"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-20"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
    </div>
    <div
      class="flex items-center gap-4 px-4 py-3.5"
      data-testid="skeleton-table-row"
    >
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-20"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 flex-1"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
      <div
        class="animate-pulse rounded bg-surface-secondary h-3.5 w-16"
      />
    </div>
  </div>
</div>
`;

exports[`Visual Regression - SkeletonLoader > SkeletonText - custom width w-3/4 1`] = `
<div>
  <div
    aria-hidden="true"
    class="animate-pulse rounded bg-surface-secondary h-4 w-3/4"
    data-testid="skeleton-text"
  />
</div>
`;

exports[`Visual Regression - SkeletonLoader > SkeletonText - default width 1`] = `
<div>
  <div
    aria-hidden="true"
    class="animate-pulse rounded bg-surface-secondary h-4 w-full"
    data-testid="skeleton-text"
  />
</div>
`;
